# YOLO_inference_test

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
module/: backend_onnxruntime.cpp  backend_onnxruntime.hpp  backend_opencv_darknet.cpp  backend_opencv_darknet.hpp  backend_opencv_onnx.cpp  backend_opencv_onnx.hpp  dnn_model_base.hpp  dnn_model_darknet.cpp  dnn_model_darknet.hpp  dnn_model_yolov10.cpp  dnn_model_yolov10.hpp  dnn_model_yolov5.cpp  dnn_model_yolov5.hpp  dnn_model_yolov6.cpp  dnn_model_yolov6.hpp  dnn_model_yolov8.cpp  dnn_model_yolov8.hpp  dnn_model_yolov9.cpp  dnn_model_yolov9.hpp  interface.hpp  make_models.hpp  postprocessor_darknet.cpp  postprocessor_darknet.hpp  postprocessor_yolov10.cpp  postprocessor_yolov10.hpp  postprocessor_yolov5.cpp  postprocessor_yolov5.hpp  postprocessor_yolov8.cpp  postprocessor_yolov8.hpp  util.cpp  util.hpp
testspace/models/: model from here.txt
